--- a/MPLABX/firmware/src/config/default/default.mhc/sercom3.yml
+++ b/MPLABX/firmware/src/config/default/default.mhc/sercom3.yml
@@ -94,7 +94,7 @@ children:
       - type: Boolean
         attributes: {id: readOnly}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
     - type: Values
       children:
       - type: Dynamic
@@ -114,7 +114,7 @@ children:
       - type: Boolean
         attributes: {id: readOnly}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
       - type: Boolean
         attributes: {id: visible}
         children:
