--- a/MPLABX/firmware/src/config/default/default.mhc/stdio.yml
+++ b/MPLABX/firmware/src/config/default/default.mhc/stdio.yml
@@ -17,7 +17,14 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: 'false'}
+        attributes: {value: 'true'}
+  - type: Boolean
+    attributes: {id: STDOUT_BUFF_MODE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'true'}
 - type: Attachments
   children:
   - type: DirectDependency
