--- a/MPLABX/firmware/src/config/default/default.mhc/tc4.yml
+++ b/MPLABX/firmware/src/config/default/default.mhc/tc4.yml
@@ -96,6 +96,13 @@ children:
         attributes: {id: enabled}
         children:
         - {type: Value, value: 'true'}
+  - type: Integer
+    attributes: {id: TC_FREQUENCY}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: tc4, value: '48000000'}
   - type: Combo
     attributes: {id: TC_OPERATION_MODE}
     children:
@@ -121,6 +128,13 @@ children:
         attributes: {id: visible}
         children:
         - {type: Value, value: 'false'}
+  - type: Long
+    attributes: {id: TC_TIMER_PERIOD}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: tc4, value: '48000'}
   - type: File
     attributes: {id: TC_TIMER_SOURCE}
     children:
